force-app/main/default/objects/Contact/fields/Full_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Full_Contact_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Contact Id</label>
    <type>Text</type>
</CustomField>