force-app/main/default/objects/Contact/fields/Is_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Billing Contact?</label>
    <type>Checkbox</type>
</CustomField>