force-app/main/default/objects/Contact/fields/Is_Secondary_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Secondary_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Secondary Billing Contact?</label>
    <type>Checkbox</type>
</CustomField>