force-app/main/default/objects/Contact/fields/Is_Test_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Test_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test Contact</label>
    <type>Checkbox</type>
</CustomField>