force-app/main/default/objects/Contact/fields/LID__Session_Id__c.field-meta.xml
<CustomField>
    <fullName>LID__Session_Id__c</fullName>
    <formula>$Api.Session_ID</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Id</label>
    <type>Text</type>
</CustomField>