force-app/main/default/objects/Contact/fields/NetSuite_Contact_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Contact_Internal_ID__c</fullName>
    <description>NetSuite Contact Internal ID</description>
    <label>NetSuite Contact Internal ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>