force-app/main/default/objects/Contact/fields/NetSuite_Internal_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Internal_ID__c</fullName>
    <label>NetSuite Internal ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>