force-app/main/default/objects/Contact/fields/Old_Org_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Org_Contact_Id__c</fullName>
    <label>Old Org Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>