force-app/main/default/objects/Contact/fields/SQL_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>SQL_Lead_Source__c</fullName>
    <label>SQL Lead Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>