force-app/main/default/objects/Contact/validationRules/Email_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Email is mandatory</errorMessage>
</ValidationRule>