force-app/main/default/objects/Contact/listViews/Mike_Fisher.listView-meta.xml
<ListView>
    <fullName>Mike_Fisher</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Mike Fisher</label>
</ListView>